force-app/main/default/objects/Platform_Event_Log__c/Platform_Event_Log__c.object-meta.xml
<CustomObject>
    <description>A log of all platform events consumed while trigger for that type is enabled.</description>
    <label>Platform Event Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Platform Event Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>