force-app/main/default/objects/Platform_Event_Log__c/fields/Platform_Event_Payload__c.field-meta.xml
<CustomField>
    <fullName>Platform_Event_Payload__c</fullName>
    <description>The full content of the platform event that is logged</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The full content of the platform event that is logged</inlineHelpText>
    <label>Platform Event Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>