force-app/main/default/objects/Platform_Event_Log__c/fields/Platform_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Platform_Event_Type__c</fullName>
    <description>API name of the Platform Event type</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API name of the Platform Event type</inlineHelpText>
    <label>Platform Event Type</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>