force-app/main/default/objects/Platform_Event_Log__c/fields/Publishing_User__c.field-meta.xml
<CustomField>
    <fullName>Publishing_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who published the Platform Event. Is populated by CreatedById by default, but can configure a populating field in the custom metadata configuration.</description>
    <inlineHelpText>User who published the Platform Event. Is populated by CreatedById by default, but can configure a populating field in the custom metadata configuration.</inlineHelpText>
    <label>Publishing User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Platform_Event_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>