force-app/main/default/objects/Platform_Event_Log__c/fields/ReplayId__c.field-meta.xml
<CustomField>
    <fullName>ReplayId__c</fullName>
    <label>ReplayId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>